<resources>
    <string name="app_name">CMM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_inicio">INICIANDO O APLICATIVO...</string>
    <string name="texto_menu_principal">PRINCIPAL - V 5.00</string>
    <string name="texto_senha">SENHA:</string>
    <string name="texto_padrao_ok">OK</string>
    <string name="texto_padrao_cancelar">CANCELAR</string>
    <string name="texto_padrao_canc">CANC.</string>
    <string name="texto_equip">EQUIPAMENTO:</string>
    <string name="texto_padrao_salvar">SALVAR</string>
    <string name="texto_atualizar_bd">ATUALIZAR DADOS</string>
    <string name="texto_num1">1</string>
    <string name="texto_num2">2</string>
    <string name="texto_num3">3</string>
    <string name="texto_num4">4</string>
    <string name="texto_num5">5</string>
    <string name="texto_num6">6</string>
    <string name="texto_num7">7</string>
    <string name="texto_num8">8</string>
    <string name="texto_num9">9</string>
    <string name="texto_padrao_apagar">APAGAR</string>
    <string name="texto_num0">0</string>
    <string name="texto_num00">00</string>
    <string name="texto_virg">,</string>
    <string name="texto_motorista">MATRIC. OPERADOR:</string>
    <string name="texto_titulo_equip">EQUIPAMENTO</string>
    <string name="texto_cod_equip">715</string>
    <string name="texto_descr_equip">COLHEDORA</string>
    <string name="texto_turno">TURNO</string>
    <string name="texto_padrao_retornar">RETORNAR</string>
    <string name="texto_os">NUM. OS:</string>
    <string name="texto_atividade">ATIVIDADE</string>
    <string name="texto_atualizar">ATUALIZAR</string>
    <string name="texto_horimetro">HORÍMETRO %1$s:</string>
    <string name="texto_implemento">IMPLEMENTO %1$s:</string>
    <string name="texto_limpar_dados">LIMPAR DADOS</string>
    <string name="texto_senha_invalida">SENHA INVÁLIDA!</string>
    <string name="texto_config_invalida">CAMPO VAZIO! POR FAVOR, PREENCHA TODOS OS CAMPOS PARA SALVAR AS CONFIGURAÇÕES.</string>
    <string name="texto_falha_acesso_boletim">ACESSO INVÁLIDO! POR FAVOR, CONFIGURE O APLICATIVO ANTES DE COMEÇAR UM NOVO BOLETIM.</string>
    <string name="texto_campo_vazio">CAMPO VAZIO! POR FAVOR, PREENCHA O CAMPO %1$s PARA DAR CONTINUIDADE AO APONTAMENTO.</string>
    <string name="texto_dado_invalido_com_atual">DADO INVÁLIDO! POR FAVOR, VERIFIQUE SE O CAMPO %1$s FOI DIGITADO CORRETAMENTE OU ATUALIZE OS DADOS PARA VERIFICAR SE OS MESMOS NÃO ESTÃO DESATUALIZADOS.</string>
    <string name="texto_falha_insercao_campo">FALHA DE INSERÇÃO! OCORREU UMA FALHA NA INSERÇÃO DO CAMPO %1$s. POR FAVOR, ENTRE EM CONTATO COM TI.</string>
    <string name="texto_falha_acesso_processo">FALHA DE ACESSO! OCORREU UMA FALHA NO ACESSO AO PROCESSO "%1$s". POR FAVOR, ENTRE EM CONTATO COM TI.</string>
    <string name="texto_msg_atualizacao">OS DADOS DOS %1$s. FOI ATUALIZADA COM SUCESSO!</string>
    <string name="texto_dado_invalido">DADO INVÁLIDO! POR FAVOR, VERIFIQUE SE O CAMPO %1$s FOI DIGITADO CORRETAMENTE.</string>
    <string name="texto_lista_menu_princ">MENU PRINCIPAL</string>
    <string name="texto_item_list">TESTE</string>
    <string name="texto_motivo_parada">MOTIVOS DE PARADA</string>
    <string name="texto_pesquisar">PESQUISAR</string>
    <string name="texto_update_sucess">ATUALIZAÇÃO DA BASE DE DADOS REALIZADA COM SUCESSO!</string>
    <string name="texto_update_failure">FALHA DE ATUALIZAÇÃO DE DADOS! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="texto_padrao_nao">NÃO</string>
    <string name="texto_padrao_sim">SIM</string>
    <string name="texto_atual_checklist">ATENÇÃO! HÁ NOVAS ATUALIZAÇÕES PARA QUESTÕES DE CHECKLIST. DESEJA ATUALIZÁ-LAS?</string>
    <string name="texto_titulo_checklist">CHECKLIST</string>
    <string name="texto_conforme">CONFORME (OK)</string>
    <string name="texto_nao_conforme">NÃO CONFORME (ANALISAR)</string>
    <string name="texto_reparo">NÃO CONFORME (REPARO)</string>
    <string name="texto_titulo_data_hora">DATA/HORA</string>
    <string name="texto_equip_invalido">EQUIPAMENTO INVÁLIDO! POR FAVOR, VERIFIQUE O NUMERO DO EQUIPAMENTO FOI DIGITADO CORRETAMENTE OU EQUIPAMENTO REALMENTE EXERCE A FUNÇÃO DE %1$s.</string>
    <string name="texto_implemento_repeated">IMPLEMENTO REPETIDO! POR FAVOR, VERIFIQUE O NUMERO DO EQUIPAMENTO FOI DIGITADO CORRETAMENTE.</string>
    <string name="texto_falha_processo">FALHA NO PROCESSO DE %1$s! POR FAVOR ENTRE EM CONTATO COM TI.</string>
</resources>