<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/buttonsVirgulaGeneric" >
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="5">

        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:weightSum="3">
            
            <Button
                android:id="@+id/button_num_1"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_num1" />

            <Button
                android:id="@+id/button_num_2"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_num2" />

            <Button
                android:id="@+id/button_num_3"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_num3" />

        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:weightSum="3">

            <Button
                android:id="@+id/button_num_4"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_num4" />

            <Button
                android:id="@+id/button_num_5"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_num5" />

            <Button
                android:id="@+id/button_num_6"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_num6" />

        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:weightSum="3">

            <Button
                android:id="@+id/button_num_7"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_num7" />

            <Button
                android:id="@+id/button_num_8"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_num8" />

            <Button
                android:id="@+id/button_num_9"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_num9" />

        </TableRow>

       <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:weightSum="3">

            <Button
                android:id="@+id/button_num_0"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_num0" />

            <Button
                android:id="@+id/buttonNum00"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_num00" />

            <Button
                android:id="@+id/buttonVirg"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_virg" />

        </TableRow>
        
       <TableRow
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:weightSum="2">

            <Button
                android:id="@+id/button_canc_padrao"
                style="@style/botao_numerico"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/texto_padrao_apagar" />

           <Button
               android:id="@+id/button_ok_padrao"
               style="@style/botao_numerico"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="@string/texto_padrao_ok" />

        </TableRow>
        
    </TableLayout>
    
</TableLayout>
