<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".features.presenter.checklist.itemchecklist.ItemCheckListFragment">

    <TextView
        android:id="@+id/text_view_titulo_checklist"
        style="@style/text_view_titulo_lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_titulo_checklist" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <TextView
            android:id="@+id/textViewItemChecklist"
            style="@style/TextViewTituloLista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/texto_cod_equip" />

    </ScrollView>

    <Button
        android:id="@+id/button_conforme"
        style="@style/botao_avulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_conforme" />

    <Button
        android:id="@+id/button_nao_conforme"
        style="@style/botao_avulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_nao_conforme" />

    <Button
        android:id="@+id/button_reparo"
        style="@style/botao_avulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_reparo" />

    <Button
        android:id="@+id/button_canc_checklist"
        style="@style/botao_avulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_padrao_retornar" />

</LinearLayout>