<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".features.presenter.apontmmfert.paradaapont.ParadaApontFragment">

    <EditText
        android:id="@+id/edit_pesq_list_parada"
        android:hint="@string/texto_pesquisar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number">
    </EditText>

    <TextView
        android:id="@+id/text_view_motivo"
        style="@style/text_view_titulo_lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_motivo_parada" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_view_mot_parada"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_row_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_atual_parada"
            style="@style/botao_avulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_atualizar" />

        <Button
            android:id="@+id/button_ret_menu_parada"
            style="@style/botao_avulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_retornar" />

    </LinearLayout>

</LinearLayout>